# RMCV2021-Introductory-Task

./: .gitignore  README.md
devel/: .catkin  setup.sh
devel/lib/example_pkg/: example_node
devel/lib/pkgconfig/: example_pkg.pc
devel/share/example_pkg/cmake/: example_pkgConfig.cmake
src/example_pkg/: CMakeLists.txt
src/example_pkg/include/: Example.hpp
src/example_pkg/src/: Example.cpp  MyExample_Node.cpp
